@startuml Class Diagram Repositories

	title MoveMate - Class Diagram - Repositories
	footer Last modified 26-09-2023 by Johnny Bakker

	namespace Services {
		interface ITokenFactory
		class JwtTokenFactory
		ITokenFactory <|.. JwtTokenFactory
	}

	namespace Repositories {
		abstract Repository {
			#_context: IMoveMateDbContext
		}

		interface ISessionRepository {
			+Refresh(int id, TimeSpan duration): string?
			+SetFirebaseToken(int id, string? token)
			+New(int userId, TimeSpan duration) : Session?
			+Get(int id): Session?
			+GetAll(): ICollection<Session>
			+GetAllWithFirebaseToken(): ICollection<Session>
			+GetByUserId(int userId): Session?
			+Expire(int id) 
		}

		interface IUserRepository {
			+GetAll(): IEnumerable<User>
			+Get(int id): User?
			+GetSubscriptions(int id): IEnumerable<int>
			+GetSubscribers(int id): IEnumerable<int>
			+GetSubscriberFirebaseTokens(int id): IEnumerable<string>
			+Subscribe(int subscriberId, int subscriptionId): bool
			+GetBySubscriberAndSubscription(int subscriberId, int subscriptionId): Subscription?
			+UnSubscribe(int subscriberId, int subscriptionId): bool
			+Search(string username): IEnumerable<User>
			+SignUp(SignUpRequest request): SignUpResult
			+Login(LoginRequest request): LoginResult
		}
		
		interface IWorkoutRepository {
			+Create(int userId, WorkoutType workoutType) : Workout?
			+Get(int id): Workout?
			+GetByUserId(int id): IEnumerable<Workout>
		}

		class SessionRepository
		class UserRepository
		class WorkoutRepository

		ISessionRepository <|.. SessionRepository
		IUserRepository <|.. UserRepository
		IWorkoutRepository <|.. WorkoutRepository

		UserRepository --|> Repository
		WorkoutRepository --|> Repository
		SessionRepository --|> Repository
	}


		
	Repositories.UserRepository o--- Services.ITokenFactory 

	namespace Database {
		interface IMoveMateDbContext
		class MoveMateDbContext
		IMoveMateDbContext <|.. MoveMateDbContext
	}
	Repositories.Repository o--- Database.IMoveMateDbContext

@enduml